Update from remote repos

--- a/.gitmodules
+++ b/.gitmodules
@@ -2608,9 +2608,6 @@
 [submodule "UCNS3D"]
 	path = UCNS3D@ucns3d-team
 	url = ssh://git@github.com/ucns3d-team/UCNS3D
-[submodule "UFEMISM"]
-	path = UFEMISM@IMAU-paleo
-	url = ssh://git@github.com/IMAU-paleo/UFEMISM
 [submodule "UMT@LLNL"]
 	path = UMT@LLNL
 	url = ssh://git@github.com/LLNL/UMT
@@ -6721,3 +6718,6 @@
 [submodule "EDIpack2.0@aamaricci"]
 	path = EDIpack2.0@aamaricci
 	url = ssh://git@github.com/aamaricci/EDIpack2.0
+[submodule "UFEMISM2.0@IMAU-paleo"]
+	path = UFEMISM2.0@IMAU-paleo
+	url = ssh://git@github.com/IMAU-paleo/UFEMISM2.0
