--- a/.gitmodules
+++ b/.gitmodules
@@ -6721,3 +6721,6 @@
 [submodule "UFEMISM2.0@IMAU-paleo"]
 	path = UFEMISM2.0@IMAU-paleo
 	url = ssh://git@github.com/IMAU-paleo/UFEMISM2.0
+[submodule "DAMASK@damask-multiphysics"]
+	path = DAMASK@damask-multiphysics
+	url = ssh://git@github.com/damask-multiphysics/DAMASK
