Add Beliavsky additions from issues #71, #74, #75, #76

--- a/.gitmodules
+++ b/.gitmodules
@@ -6721,3 +6721,54 @@
 [submodule "DAMASK@damask-multiphysics"]
 	path = DAMASK@damask-multiphysics
 	url = ssh://git@github.com/damask-multiphysics/DAMASK
+[submodule "fortran-xtfc@neuralXray"]
+	path = fortran-xtfc@neuralXray
+	url = https://github.com/neuralXray/fortran-xtfc
+[submodule "fortran_oo@pletzer"]
+	path = fortran_oo@pletzer
+	url = https://github.com/pletzer/fortran_oo
+[submodule "slstr-preprocessor@surftemp"]
+	path = slstr-preprocessor@surftemp
+	url = https://github.com/surftemp/slstr-preprocessor
+[submodule "ACRS@DerivativeFreeLibrary"]
+	path = ACRS@DerivativeFreeLibrary
+	url = https://github.com/DerivativeFreeLibrary/ACRS
+[submodule "DFN@DerivativeFreeLibrary"]
+	path = DFN@DerivativeFreeLibrary
+	url = https://github.com/DerivativeFreeLibrary/DFN
+[submodule "TESTGO@DerivativeFreeLibrary"]
+	path = TESTGO@DerivativeFreeLibrary
+	url = https://github.com/DerivativeFreeLibrary/TESTGO
+[submodule "DDFSA@DerivativeFreeLibrary"]
+	path = DDFSA@DerivativeFreeLibrary
+	url = https://github.com/DerivativeFreeLibrary/DDFSA
+[submodule "DFBOX_IMPR@DerivativeFreeLibrary"]
+	path = DFBOX_IMPR@DerivativeFreeLibrary
+	url = https://github.com/DerivativeFreeLibrary/DFBOX_IMPR
+[submodule "DFLvinc@DerivativeFreeLibrary"]
+	path = DFLvinc@DerivativeFreeLibrary
+	url = https://github.com/DerivativeFreeLibrary/DFLvinc
+[submodule "DFMO@DerivativeFreeLibrary"]
+	path = DFMO@DerivativeFreeLibrary
+	url = https://github.com/DerivativeFreeLibrary/DFMO
+[submodule "DFSA@DerivativeFreeLibrary"]
+	path = DFSA@DerivativeFreeLibrary
+	url = https://github.com/DerivativeFreeLibrary/DFSA
+[submodule "DIRDFN@DerivativeFreeLibrary"]
+	path = DIRDFN@DerivativeFreeLibrary
+	url = https://github.com/DerivativeFreeLibrary/DIRDFN
+[submodule "DIRMIN@DerivativeFreeLibrary"]
+	path = DIRMIN@DerivativeFreeLibrary
+	url = https://github.com/DerivativeFreeLibrary/DIRMIN
+[submodule "MODIR@DerivativeFreeLibrary"]
+	path = MODIR@DerivativeFreeLibrary
+	url = https://github.com/DerivativeFreeLibrary/MODIR
+[submodule "SDMINMAX@DerivativeFreeLibrary"]
+	path = SDMINMAX@DerivativeFreeLibrary
+	url = https://github.com/DerivativeFreeLibrary/SDMINMAX
+[submodule "TESTMO@DerivativeFreeLibrary"]
+	path = TESTMO@DerivativeFreeLibrary
+	url = https://github.com/DerivativeFreeLibrary/TESTMO
+[submodule "DFL@DerivativeFreeLibrary"]
+	path = DFL@DerivativeFreeLibrary
+	url = https://github.com/DerivativeFreeLibrary/DFL
