Add new projects mentioned in fortran-lang.org

--- a/.gitmodules
+++ b/.gitmodules
@@ -6772,3 +6772,6 @@
 [submodule "DFL@DerivativeFreeLibrary"]
 	path = DFL@DerivativeFreeLibrary
 	url = https://github.com/DerivativeFreeLibrary/DFL
+[submodule "CaNS@p-costa"]
+	path = CaNS@p-costa
+	url = ssh://git@github.com/p-costa/CaNS
