Add now projects from Beliavsky's site; update exceptions

--- a/.gitmodules
+++ b/.gitmodules
@@ -6775,3 +6775,291 @@
 [submodule "CaNS@p-costa"]
 	path = CaNS@p-costa
 	url = ssh://git@github.com/p-costa/CaNS
+[submodule "plot3dtool@Adermr"]
+	path = plot3dtool@Adermr
+	url = ssh://git@github.com/Adermr/plot3dtool
+[submodule "Synthetic-Eddy-Method-KCX2013@AkshayPatil1994"]
+	path = Synthetic-Eddy-Method-KCX2013@AkshayPatil1994
+	url = ssh://git@github.com/AkshayPatil1994/Synthetic-Eddy-Method-KCX2013
+[submodule "ANSYS-USERELEMENT-PHFLD@Andrey-Fog"]
+	path = ANSYS-USERELEMENT-PHFLD@Andrey-Fog
+	url = ssh://git@github.com/Andrey-Fog/ANSYS-USERELEMENT-PHFLD
+[submodule "Lubrication-Dynamics-Biviscous@BCAM-CFD"]
+	path = Lubrication-Dynamics-Biviscous@BCAM-CFD
+	url = ssh://git@github.com/BCAM-CFD/Lubrication-Dynamics-Biviscous
+[submodule "SPH_fractional@BCAM-CFD"]
+	path = SPH_fractional@BCAM-CFD
+	url = ssh://git@github.com/BCAM-CFD/SPH_fractional
+[submodule "Computer-Methods-for-Mathematical-Computations@Beliavsky"]
+	path = Computer-Methods-for-Mathematical-Computations@Beliavsky
+	url = ssh://git@github.com/Beliavsky/Computer-Methods-for-Mathematical-Computations
+[submodule "domain-tools@COSIMA"]
+	path = domain-tools@COSIMA
+	url = ssh://git@github.com/COSIMA/domain-tools
+[submodule "grid_interpolation@ChristianSteger"]
+	path = grid_interpolation@ChristianSteger
+	url = ssh://git@github.com/ChristianSteger/grid_interpolation
+[submodule "YAPS@Daniel-Harrington"]
+	path = YAPS@Daniel-Harrington
+	url = ssh://git@github.com/Daniel-Harrington/YAPS
+[submodule "gpu-programming@ENCCS"]
+	path = gpu-programming@ENCCS
+	url = ssh://git@github.com/ENCCS/gpu-programming
+[submodule "ARTEMIS@ExeQuantCode"]
+	path = ARTEMIS@ExeQuantCode
+	url = ssh://git@github.com/ExeQuantCode/ARTEMIS
+[submodule "HeatFlow@ExeQuantCode"]
+	path = HeatFlow@ExeQuantCode
+	url = ssh://git@github.com/ExeQuantCode/HeatFlow
+[submodule "RAFFLE@ExeQuantCode"]
+	path = RAFFLE@ExeQuantCode
+	url = ssh://git@github.com/ExeQuantCode/RAFFLE
+[submodule "projcoonv@Francesco-Uboldi"]
+	path = projcoonv@Francesco-Uboldi
+	url = ssh://git@github.com/Francesco-Uboldi/projcoonv
+[submodule "DALEC-Grass@GCEL"]
+	path = DALEC-Grass@GCEL
+	url = ssh://git@github.com/GCEL/DALEC-Grass
+[submodule "easydop853@GasinAn"]
+	path = easydop853@GasinAn
+	url = ssh://git@github.com/GasinAn/easydop853
+[submodule "Linking_SAR_and_ABL_structure@HugoJacq"]
+	path = Linking_SAR_and_ABL_structure@HugoJacq
+	url = ssh://git@github.com/HugoJacq/Linking_SAR_and_ABL_structure
+[submodule "fbingo@JMeyer1991"]
+	path = fbingo@JMeyer1991
+	url = ssh://git@github.com/JMeyer1991/fbingo
+[submodule "AHMS-IRRIG@JiangCong1990"]
+	path = AHMS-IRRIG@JiangCong1990
+	url = ssh://git@github.com/JiangCong1990/AHMS-IRRIG
+[submodule "libgnuplot-fortran@JoseAntonioLattice"]
+	path = libgnuplot-fortran@JoseAntonioLattice
+	url = ssh://git@github.com/JoseAntonioLattice/libgnuplot-fortran
+[submodule "NPB@LLNL"]
+	path = NPB@LLNL
+	url = ssh://git@github.com/LLNL/NPB
+[submodule "UEDGE@LLNL"]
+	path = UEDGE@LLNL
+	url = ssh://git@github.com/LLNL/UEDGE
+[submodule "cryoH2vehicle@LLNL"]
+	path = cryoH2vehicle@LLNL
+	url = ssh://git@github.com/LLNL/cryoH2vehicle
+[submodule "ddd@LLNL"]
+	path = ddd@LLNL
+	url = ssh://git@github.com/LLNL/ddd
+[submodule "ns3-if77-module@LLNL"]
+	path = ns3-if77-module@LLNL
+	url = ssh://git@github.com/LLNL/ns3-if77-module
+[submodule "pyranda@LLNL"]
+	path = pyranda@LLNL
+	url = ssh://git@github.com/LLNL/pyranda
+[submodule "mpi-project-exploration@MatthAlex"]
+	path = mpi-project-exploration@MatthAlex
+	url = ssh://git@github.com/MatthAlex/mpi-project-exploration
+[submodule "MARFA@Razumovskyy"]
+	path = MARFA@Razumovskyy
+	url = ssh://git@github.com/Razumovskyy/MARFA
+[submodule "CREST@TRIBO-Pprime"]
+	path = CREST@TRIBO-Pprime
+	url = ssh://git@github.com/TRIBO-Pprime/CREST
+[submodule "MSOLV@TRIBO-Pprime"]
+	path = MSOLV@TRIBO-Pprime
+	url = ssh://git@github.com/TRIBO-Pprime/MSOLV
+[submodule "MUSST@TRIBO-Pprime"]
+	path = MUSST@TRIBO-Pprime
+	url = ssh://git@github.com/TRIBO-Pprime/MUSST
+[submodule "TOOLIB@TRIBO-Pprime"]
+	path = TOOLIB@TRIBO-Pprime
+	url = ssh://git@github.com/TRIBO-Pprime/TOOLIB
+[submodule "TRIDENT@TRIBO-Pprime"]
+	path = TRIDENT@TRIBO-Pprime
+	url = ssh://git@github.com/TRIBO-Pprime/TRIDENT
+[submodule "STARS@UoA-Stars-And-Supernovae"]
+	path = STARS@UoA-Stars-And-Supernovae
+	url = ssh://git@github.com/UoA-Stars-And-Supernovae/STARS
+[submodule "FDFK2D@YoushanLiu"]
+	path = FDFK2D@YoushanLiu
+	url = ssh://git@github.com/YoushanLiu/FDFK2D
+[submodule "rooster-mf@advanced-nuclear-systems"]
+	path = rooster-mf@advanced-nuclear-systems
+	url = ssh://git@github.com/advanced-nuclear-systems/rooster-mf
+[submodule "Fyaml@bbakernoaa"]
+	path = Fyaml@bbakernoaa
+	url = ssh://git@github.com/bbakernoaa/Fyaml
+[submodule "compiler-bugs@btrettel"]
+	path = compiler-bugs@btrettel
+	url = ssh://git@github.com/btrettel/compiler-bugs
+[submodule "climber-x@cxesmc"]
+	path = climber-x@cxesmc
+	url = ssh://git@github.com/cxesmc/climber-x
+[submodule "fftlog@emsig"]
+	path = fftlog@emsig
+	url = ssh://git@github.com/emsig/fftlog
+[submodule "sfd_excmg@eqfwrg424535"]
+	path = sfd_excmg@eqfwrg424535
+	url = ssh://git@github.com/eqfwrg424535/sfd_excmg
+[submodule "NuLib@evanoconnor"]
+	path = NuLib@evanoconnor
+	url = ssh://git@github.com/evanoconnor/NuLib
+[submodule "libsupermesh@firedrakeproject"]
+	path = libsupermesh@firedrakeproject
+	url = ssh://git@github.com/firedrakeproject/libsupermesh
+[submodule "task-dispatch@gronki"]
+	path = task-dispatch@gronki
+	url = ssh://git@github.com/gronki/task-dispatch
+[submodule "yaftree@gronki"]
+	path = yaftree@gronki
+	url = ssh://git@github.com/gronki/yaftree
+[submodule "fortran-xmpp@interkosmos"]
+	path = fortran-xmpp@interkosmos
+	url = ssh://git@github.com/interkosmos/fortran-xmpp
+[submodule "fcc_tools@jcerezochem"]
+	path = fcc_tools@jcerezochem
+	url = ssh://git@github.com/jcerezochem/fcc_tools
+[submodule "fortran-graphics@jeyemhex"]
+	path = fortran-graphics@jeyemhex
+	url = ssh://git@github.com/jeyemhex/fortran-graphics
+[submodule "JSPAM@jfwallin"]
+	path = JSPAM@jfwallin
+	url = ssh://git@github.com/jfwallin/JSPAM
+[submodule "COLOSS@jinleiphys"]
+	path = COLOSS@jinleiphys
+	url = ssh://git@github.com/jinleiphys/COLOSS
+[submodule "lcmin@johngardenghi"]
+	path = lcmin@johngardenghi
+	url = ssh://git@github.com/johngardenghi/lcmin
+[submodule "fglm@jordan4ibanez"]
+	path = fglm@jordan4ibanez
+	url = ssh://git@github.com/jordan4ibanez/fglm
+[submodule "files_f90@jordan4ibanez"]
+	path = files_f90@jordan4ibanez
+	url = ssh://git@github.com/jordan4ibanez/files_f90
+[submodule "for_fifo_queue@jordan4ibanez"]
+	path = for_fifo_queue@jordan4ibanez
+	url = ssh://git@github.com/jordan4ibanez/for_fifo_queue
+[submodule "fortran_vector@jordan4ibanez"]
+	path = fortran_vector@jordan4ibanez
+	url = ssh://git@github.com/jordan4ibanez/fortran_vector
+[submodule "hashmap_f90@jordan4ibanez"]
+	path = hashmap_f90@jordan4ibanez
+	url = ssh://git@github.com/jordan4ibanez/hashmap_f90
+[submodule "integer_set@jordan4ibanez"]
+	path = integer_set@jordan4ibanez
+	url = ssh://git@github.com/jordan4ibanez/integer_set
+[submodule "simple-2d-ns@kevzhong"]
+	path = simple-2d-ns@kevzhong
+	url = ssh://git@github.com/kevzhong/simple-2d-ns
+[submodule "FortranDirectAccess@koseiohara"]
+	path = FortranDirectAccess@koseiohara
+	url = ssh://git@github.com/koseiohara/FortranDirectAccess
+[submodule "MIM@koseiohara"]
+	path = MIM@koseiohara
+	url = ssh://git@github.com/koseiohara/MIM
+[submodule "movingAverage@koseiohara"]
+	path = movingAverage@koseiohara
+	url = ssh://git@github.com/koseiohara/movingAverage
+[submodule "PIMDkk@kuwahatakazuaki"]
+	path = PIMDkk@kuwahatakazuaki
+	url = ssh://git@github.com/kuwahatakazuaki/PIMDkk
+[submodule "lfortran@lfortran"]
+	path = lfortran@lfortran
+	url = ssh://git@github.com/lfortran/lfortran
+[submodule "Contour_531@lguez"]
+	path = Contour_531@lguez
+	url = ssh://git@github.com/lguez/Contour_531
+[submodule "EZMPI@lguez"]
+	path = EZMPI@lguez
+	url = ssh://git@github.com/lguez/EZMPI
+[submodule "Max_diff_nc@lguez"]
+	path = Max_diff_nc@lguez
+	url = ssh://git@github.com/lguez/Max_diff_nc
+[submodule "Thermal-Diffusivity@mason-daniel"]
+	path = Thermal-Diffusivity@mason-daniel
+	url = ssh://git@github.com/mason-daniel/Thermal-Diffusivity
+[submodule "simulated_tem@mason-daniel"]
+	path = simulated_tem@mason-daniel
+	url = ssh://git@github.com/mason-daniel/simulated_tem
+[submodule "mdpa@mingdengming"]
+	path = mdpa@mingdengming
+	url = ssh://git@github.com/mingdengming/mdpa
+[submodule "seismicgradiometry@mogiso"]
+	path = seismicgradiometry@mogiso
+	url = ssh://git@github.com/mogiso/seismicgradiometry
+[submodule "fldpc@moriglia"]
+	path = fldpc@moriglia
+	url = ssh://git@github.com/moriglia/fldpc
+[submodule "boxcode2d-legacy@mrachh"]
+	path = boxcode2d-legacy@mrachh
+	url = ssh://git@github.com/mrachh/boxcode2d-legacy
+[submodule "xnirspec@nicocardiel"]
+	path = xnirspec@nicocardiel
+	url = ssh://git@github.com/nicocardiel/xnirspec
+[submodule "gedatsu@nqomorita"]
+	path = gedatsu@nqomorita
+	url = ssh://git@github.com/nqomorita/gedatsu
+[submodule "MSIM@nschorgh"]
+	path = MSIM@nschorgh
+	url = ssh://git@github.com/nschorgh/MSIM
+[submodule "BLZPACK@oamarques"]
+	path = BLZPACK@oamarques
+	url = ssh://git@github.com/oamarques/BLZPACK
+[submodule "FastIsostasy@palma-ice"]
+	path = FastIsostasy@palma-ice
+	url = ssh://git@github.com/palma-ice/FastIsostasy
+[submodule "CUBENS@pcboldini"]
+	path = CUBENS@pcboldini
+	url = ssh://git@github.com/pcboldini/CUBENS
+[submodule "ndsm@sag2021"]
+	path = ndsm@sag2021
+	url = ssh://git@github.com/sag2021/ndsm
+[submodule "PFLARE@stevendargaville"]
+	path = PFLARE@stevendargaville
+	url = ssh://git@github.com/stevendargaville/PFLARE
+[submodule "2DHydro@sudarshanphy"]
+	path = 2DHydro@sudarshanphy
+	url = ssh://git@github.com/sudarshanphy/2DHydro
+[submodule "fmpl@supercomputerprimesearch"]
+	path = fmpl@supercomputerprimesearch
+	url = ssh://git@github.com/supercomputerprimesearch/fmpl
+[submodule "FortranRiskEngine@tembolo1284"]
+	path = FortranRiskEngine@tembolo1284
+	url = ssh://git@github.com/tembolo1284/FortranRiskEngine
+[submodule "8bandkp-fdm@tiagocampo"]
+	path = 8bandkp-fdm@tiagocampo
+	url = ssh://git@github.com/tiagocampo/8bandkp-fdm
+[submodule "excelapack@tkdhss111"]
+	path = excelapack@tkdhss111
+	url = ssh://git@github.com/tkdhss111/excelapack
+[submodule "fortran-CLI@tkdhss111"]
+	path = fortran-CLI@tkdhss111
+	url = ssh://git@github.com/tkdhss111/fortran-CLI
+[submodule "fortran-datetime@tkdhss111"]
+	path = fortran-datetime@tkdhss111
+	url = ssh://git@github.com/tkdhss111/fortran-datetime
+[submodule "fortran-logger@tkdhss111"]
+	path = fortran-logger@tkdhss111
+	url = ssh://git@github.com/tkdhss111/fortran-logger
+[submodule "fortran-sqlcipher@tkdhss111"]
+	path = fortran-sqlcipher@tkdhss111
+	url = ssh://git@github.com/tkdhss111/fortran-sqlcipher
+[submodule "fpm-search@urbanjost"]
+	path = fpm-search@urbanjost
+	url = ssh://git@github.com/urbanjost/fpm-search
+[submodule "xframes-fortran@xframes-project"]
+	path = xframes-fortran@xframes-project
+	url = ssh://git@github.com/xframes-project/xframes-fortran
+[submodule "fsys@yymmt742"]
+	path = fsys@yymmt742
+	url = ssh://git@github.com/yymmt742/fsys
+[submodule "mobbrmsd@yymmt742"]
+	path = mobbrmsd@yymmt742
+	url = ssh://git@github.com/yymmt742/mobbrmsd
+[submodule "tri_indices@yymmt742"]
+	path = tri_indices@yymmt742
+	url = ssh://git@github.com/yymmt742/tri_indices
+[submodule "HarmonicanalysisTideLoad@zcyphygeodesy"]
+	path = HarmonicanalysisTideLoad@zcyphygeodesy
+	url = ssh://git@github.com/zcyphygeodesy/HarmonicanalysisTideLoad
+[submodule "Meso-NH@QuentinRodier"]
+	path = Meso-NH@QuentinRodier
+	url = ssh://git@github.com/QuentinRodier/Meso-NH
