Only keep compressed versions of large files

--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,8 @@
 # Miscellany
 **/.DS_Store
 .markdown-preview.html
+
+# Files that we commit to git as compressed
+all-files.txt
+all-fortran-files-attr.txt
+all-fortran-files-type.txt
