Add Berkeley Lab' 'assert' library

--- a/.gitmodules
+++ b/.gitmodules
@@ -7063,3 +7063,6 @@
 [submodule "Meso-NH@QuentinRodier"]
 	path = Meso-NH@QuentinRodier
 	url = ssh://git@github.com/QuentinRodier/Meso-NH
+[submodule "assert@BerkeleyLab"]
+	path = assert@BerkeleyLab
+	url = https://github.com/BerkeleyLab/assert
