Add more projects from SWMFsoftware
BATSRUS
CICI
Ridley_Serial
share

--- a/.gitmodules
+++ b/.gitmodules
@@ -7063,3 +7063,15 @@
 [submodule "assert@BerkeleyLab"]
 	path = assert@BerkeleyLab
 	url = https://github.com/BerkeleyLab/assert
+[submodule "BATSRUS@SWMFsoftware"]
+	path = BATSRUS@SWMFsoftware
+	url = git@github.com:SWMFsoftware/BATSRUS.git
+[submodule "CICI@SWMFsoftware"]
+	path = CICI@SWMFsoftware
+	url = git@github.com:SWMFsoftware/CIMI.git
+[submodule "share@SWMFsoftware"]
+	path = share@SWMFsoftware
+	url = git@github.com:SWMFsoftware/share.git
+[submodule "Ridley_serial@SWMFsoftware"]
+	path = Ridley_serial@SWMFsoftware
+	url = git@github.com:SWMFsoftware/Ridley_serial.git
