Monthly update of new projects in fortran-lang.org packages pages

--- a/.gitmodules
+++ b/.gitmodules
@@ -7573,3 +7573,18 @@
 [submodule "OrganicSolarCellModel@zhouych87"]
 	path = OrganicSolarCellModel@zhouych87
 	url = ssh://git@github.com/zhouych87/OrganicSolarCellModel
+[submodule "fortitude@PlasmaFAIR"]
+	path = fortitude@PlasmaFAIR
+	url = ssh://git@github.com/PlasmaFAIR/fortitude
+[submodule "precice@precice"]
+	path = precice@precice
+	url = ssh://git@github.com/precice/precice
+[submodule "FLAME@flame-code"]
+	path = FLAME@flame-code
+	url = ssh://git@gitlab.com/flame-code/FLAME
+[submodule "mokit@jxzou"]
+	path = mokit@jxzou
+	url = ssh://git@gitlab.com/jxzou/mokit
+[submodule "qr_mumps@qr_mumps"]
+	path = qr_mumps@qr_mumps
+	url = ssh://git@gitlab.com/qr_mumps/qr_mumps
