Monthly update from remote repos

--- a/.gitmodules
+++ b/.gitmodules
@@ -973,9 +973,6 @@
 [submodule "Futility"]
 	path = Futility@CASL
 	url = git@github.com:CASL/Futility.git
-[submodule "FuzzifiED_Fortran@mankai-chow"]
-	path = FuzzifiED_Fortran@mankai-chow
-	url = ssh://git@github.com/mankai-chow/FuzzifiED_Fortran
 [submodule "GALAHAD"]
 	path = GALAHAD@ralna
 	url = ssh://git@github.com/ralna/GALAHAD
@@ -1432,9 +1429,6 @@
 [submodule "LINVARIANT"]
 	path = LINVARIANT@PaulChern
 	url = ssh://git@github.com/PaulChern/LINVARIANT
-[submodule "LISF"]
-	path = LISF@NASA-LIS
-	url = ssh://git@github.com/NASA-LIS/LISF
 [submodule "LMBM"]
 	path = LMBM@wilmerhenao
 	url = ssh://git@github.com/wilmerhenao/LMBM
@@ -6700,9 +6694,6 @@
 [submodule "ciftbx@yayahjb"]
 	path = ciftbx@yayahjb
 	url = ssh://git@github.com/yayahjb/ciftbx
-[submodule "CaNS@CaNS-World"]
-	path = CaNS@CaNS-World
-	url = ssh://git@github.com/CaNS-World/CaNS.git
 [submodule "SWMF@SWMFsoftware"]
 	path = SWMF@SWMFsoftware
 	url = ssh://git@github.com/SWMFsoftware/SWMF.git
@@ -6769,9 +6760,6 @@
 [submodule "DFL@DerivativeFreeLibrary"]
 	path = DFL@DerivativeFreeLibrary
 	url = https://github.com/DerivativeFreeLibrary/DFL
-[submodule "CaNS@p-costa"]
-	path = CaNS@p-costa
-	url = ssh://git@github.com/p-costa/CaNS
 [submodule "plot3dtool@Adermr"]
 	path = plot3dtool@Adermr
 	url = ssh://git@github.com/Adermr/plot3dtool
@@ -7264,9 +7252,6 @@
 [submodule "Bolander-Linear-Algebra-Library@bolanderc"]
 	path = Bolander-Linear-Algebra-Library@bolanderc
 	url = ssh://git@github.com/bolanderc/Bolander-Linear-Algebra-Library
-[submodule "dynamon@boneta"]
-	path = dynamon@boneta
-	url = ssh://git@github.com/boneta/dynamon
 [submodule "FORTRAN-ODE-Toolbox@bryand4140"]
 	path = FORTRAN-ODE-Toolbox@bryand4140
 	url = ssh://git@github.com/bryand4140/FORTRAN-ODE-Toolbox
@@ -7543,9 +7528,6 @@
 [submodule "umat_finite_viscoelasticity@thealanjason"]
 	path = umat_finite_viscoelasticity@thealanjason
 	url = ssh://git@github.com/thealanjason/umat_finite_viscoelasticity
-[submodule "KW_TC_boundary_layer@thomas-fred"]
-	path = KW_TC_boundary_layer@thomas-fred
-	url = ssh://git@github.com/thomas-fred/KW_TC_boundary_layer
 [submodule "simsphere@tjc181"]
 	path = simsphere@tjc181
 	url = ssh://git@github.com/tjc181/simsphere
@@ -7588,3 +7570,12 @@
 [submodule "qr_mumps@qr_mumps"]
 	path = qr_mumps@qr_mumps
 	url = ssh://git@gitlab.com/qr_mumps/qr_mumps
+[submodule "CaNS@CaNS-World"]
+	path = CaNS@CaNS-World
+	url = git@github.com:CaNS-World/CaNS.git
+[submodule "LISF@NASA-LIS"]
+	path = LISF@NASA-LIS
+	url = git@github.com:NASA-LIS/LISF.git
+[submodule "CaNS-Fizzy@CaNS-World"]
+	path = CaNS-Fizzy@CaNS-World
+	url = https://github.com/CaNS-World/CaNS-Fizzy.git
