Monthly update of new projects in fortran-lang.org packages pages

--- a/.gitmodules
+++ b/.gitmodules
@@ -7579,3 +7579,9 @@
 [submodule "CaNS-Fizzy@CaNS-World"]
 	path = CaNS-Fizzy@CaNS-World
 	url = https://github.com/CaNS-World/CaNS-Fizzy.git
+[submodule "aotus@apes-suite"]
+	path = aotus@apes-suite
+	url = ssh://git@github.com/apes-suite/aotus
+[submodule "CaNS@p-costa"]
+	path = CaNS@p-costa
+	url = ssh://git@github.com/p-costa/CaNS
