Monthly update from remote repos

--- a/.gitmodules
+++ b/.gitmodules
@@ -3271,9 +3271,6 @@
 [submodule "defmod-swpc"]
 	path = defmod-swpc@Chunfang
 	url = ssh://git@github.com/Chunfang/defmod-swpc
-[submodule "dep"]
-	path = dep@dailyerosion
-	url = ssh://git@github.com/dailyerosion/dep
 [submodule "dfsaneacc@cran"]
 	path = dfsaneacc@cran
 	url = ssh://git@github.com/cran/dfsaneacc
@@ -6385,9 +6382,6 @@
 [submodule "universe-age"]
 	path = universe-age@shu-yusa
 	url = ssh://git@github.com/shu-yusa/universe-age
-[submodule "unrestricted_hartree_fock"]
-	path = unrestricted_hartree_fock@xiaobo-23
-	url = ssh://git@github.com/xiaobo-23/unrestricted_hartree_fock
 [submodule "unstructured-finite-volume"]
 	path = unstructured-finite-volume@komahanb
 	url = ssh://git@github.com/komahanb/unstructured-finite-volume
@@ -6928,9 +6922,6 @@
 [submodule "simple-2d-ns@kevzhong"]
 	path = simple-2d-ns@kevzhong
 	url = ssh://git@github.com/kevzhong/simple-2d-ns
-[submodule "FortranDirectAccess@koseiohara"]
-	path = FortranDirectAccess@koseiohara
-	url = ssh://git@github.com/koseiohara/FortranDirectAccess
 [submodule "MIM@koseiohara"]
 	path = MIM@koseiohara
 	url = ssh://git@github.com/koseiohara/MIM
@@ -7462,9 +7453,6 @@
 [submodule "OSERIT-drift@naturalsciences"]
 	path = OSERIT-drift@naturalsciences
 	url = ssh://git@github.com/naturalsciences/OSERIT-drift
-[submodule "MESA_custom_colours@nialljmiller"]
-	path = MESA_custom_colours@nialljmiller
-	url = ssh://git@github.com/nialljmiller/MESA_custom_colours
 [submodule "pyjktebop@nmiller95"]
 	path = pyjktebop@nmiller95
 	url = ssh://git@github.com/nmiller95/pyjktebop
@@ -7972,9 +7960,6 @@
 [submodule "CWT@khaors"]
 	path = CWT@khaors
 	url = ssh://git@github.com/khaors/CWT
-[submodule "CaseConverter@koseiohara"]
-	path = CaseConverter@koseiohara
-	url = ssh://git@github.com/koseiohara/CaseConverter
 [submodule "EDAT@koseiohara"]
 	path = EDAT@koseiohara
 	url = ssh://git@github.com/koseiohara/EDAT
@@ -8182,3 +8167,288 @@
 [submodule "OpenMMPol@Molecolab-Pisa"]
 	path = OpenMMPol@Molecolab-Pisa
         url = ssh://git@github.com:Molecolab-Pisa/OpenMMPol.git
+[submodule "setup-fortran@fortran-lang"]
+	path = setup-fortran@fortran-lang
+	url = ssh://git@github.com/fortran-lang/setup-fortran
+[submodule "starburst99-v7.0.2@1digitaldesign"]
+	path = starburst99-v7.0.2@1digitaldesign
+	url = ssh://git@github.com/1digitaldesign/starburst99-v7.0.2
+[submodule "ARPREC@BL-highprecision"]
+	path = ARPREC@BL-highprecision
+	url = ssh://git@github.com/BL-highprecision/ARPREC
+[submodule "PIBM@BingzhangChen"]
+	path = PIBM@BingzhangChen
+	url = ssh://git@github.com/BingzhangChen/PIBM
+[submodule "pytorch_from_fortran@ChrisDeGrendele"]
+	path = pytorch_from_fortran@ChrisDeGrendele
+	url = ssh://git@github.com/ChrisDeGrendele/pytorch_from_fortran
+[submodule "ISBN9784274224706-fortran@DSCF-1224"]
+	path = ISBN9784274224706-fortran@DSCF-1224
+	url = ssh://git@github.com/DSCF-1224/ISBN9784274224706-fortran
+[submodule "ieee_class_fortran@DSCF-1224"]
+	path = ieee_class_fortran@DSCF-1224
+	url = ssh://git@github.com/DSCF-1224/ieee_class_fortran
+[submodule "libqist@DavidACunningham"]
+	path = libqist@DavidACunningham
+	url = ssh://git@github.com/DavidACunningham/libqist
+[submodule "2025-05-19-MO-Fortran-intro@EPCCed"]
+	path = 2025-05-19-MO-Fortran-intro@EPCCed
+	url = ssh://git@github.com/EPCCed/2025-05-19-MO-Fortran-intro
+[submodule "IBM_TENO@FallenCastle"]
+	path = IBM_TENO@FallenCastle
+	url = ssh://git@github.com/FallenCastle/IBM_TENO
+[submodule "mercury@Fenu24"]
+	path = mercury@Fenu24
+	url = ssh://git@github.com/Fenu24/mercury
+[submodule "iHydroSlide3D@GuodingChen"]
+	path = iHydroSlide3D@GuodingChen
+	url = ssh://git@github.com/GuodingChen/iHydroSlide3D
+[submodule "ORCTM@HuangOCEAN02"]
+	path = ORCTM@HuangOCEAN02
+	url = ssh://git@github.com/HuangOCEAN02/ORCTM
+[submodule "fynth@JeffIrwin"]
+	path = fynth@JeffIrwin
+	url = ssh://git@github.com/JeffIrwin/fynth
+[submodule "numerical-analysis@JeffIrwin"]
+	path = numerical-analysis@JeffIrwin
+	url = ssh://git@github.com/JeffIrwin/numerical-analysis
+[submodule "UCSD_p-Trek@Jim-F"]
+	path = UCSD_p-Trek@Jim-F
+	url = ssh://git@github.com/Jim-F/UCSD_p-Trek
+[submodule "SAM_SRCv6.11@KuangLab-Harvard"]
+	path = SAM_SRCv6.11@KuangLab-Harvard
+	url = ssh://git@github.com/KuangLab-Harvard/SAM_SRCv6.11
+[submodule "fortran_unitialised_vars@MartinDix"]
+	path = fortran_unitialised_vars@MartinDix
+	url = ssh://git@github.com/MartinDix/fortran_unitialised_vars
+[submodule "FLOW36@MultiphaseFlowLab"]
+	path = FLOW36@MultiphaseFlowLab
+	url = ssh://git@github.com/MultiphaseFlowLab/FLOW36
+[submodule "MHIT36@MultiphaseFlowLab"]
+	path = MHIT36@MultiphaseFlowLab
+	url = ssh://git@github.com/MultiphaseFlowLab/MHIT36
+[submodule "BEAM_beta@NASA-Planetary-Science"]
+	path = BEAM_beta@NASA-Planetary-Science
+	url = ssh://git@github.com/NASA-Planetary-Science/BEAM_beta
+[submodule "Pade-disk-code@NASA-Planetary-Science"]
+	path = Pade-disk-code@NASA-Planetary-Science
+	url = ssh://git@github.com/NASA-Planetary-Science/Pade-disk-code
+[submodule "DISCOVER@NKI-CCB"]
+	path = DISCOVER@NKI-CCB
+	url = ssh://git@github.com/NKI-CCB/DISCOVER
+[submodule "UGWP@NOAA-GSL"]
+	path = UGWP@NOAA-GSL
+	url = ssh://git@github.com/NOAA-GSL/UGWP
+[submodule "RUMDEED@NanoPhysicsCenter"]
+	path = RUMDEED@NanoPhysicsCenter
+	url = ssh://git@github.com/NanoPhysicsCenter/RUMDEED
+[submodule "MOSS@OSGeo"]
+	path = MOSS@OSGeo
+	url = ssh://git@github.com/OSGeo/MOSS
+[submodule "NTLP@RichterLab"]
+	path = NTLP@RichterLab
+	url = ssh://git@github.com/RichterLab/NTLP
+[submodule "QSSPPEGS_2020@RongjiangWang"]
+	path = QSSPPEGS_2020@RongjiangWang
+	url = ssh://git@github.com/RongjiangWang/QSSPPEGS_2020
+[submodule "snesim-standalone@SCRFpublic"]
+	path = snesim-standalone@SCRFpublic
+	url = ssh://git@github.com/SCRFpublic/snesim-standalone
+[submodule "XIAM-2NQ@SvenHerbers"]
+	path = XIAM-2NQ@SvenHerbers
+	url = ssh://git@github.com/SvenHerbers/XIAM-2NQ
+[submodule "EulerFV@ackirby88"]
+	path = EulerFV@ackirby88
+	url = ssh://git@github.com/ackirby88/EulerFV
+[submodule "Whetstone@akrivitsky7"]
+	path = Whetstone@akrivitsky7
+	url = ssh://git@github.com/akrivitsky7/Whetstone
+[submodule "CDMSreader@banana-bred"]
+	path = CDMSreader@banana-bred
+	url = ssh://git@github.com/banana-bred/CDMSreader
+[submodule "FORTRAN-Input-Output-Toolbox@bryand4140"]
+	path = FORTRAN-Input-Output-Toolbox@bryand4140
+	url = ssh://git@github.com/bryand4140/FORTRAN-Input-Output-Toolbox
+[submodule "open-catalog@codee-com"]
+	path = open-catalog@codee-com
+	url = ssh://git@github.com/codee-com/open-catalog
+[submodule "odbc.f@davidpfister"]
+	path = odbc.f@davidpfister
+	url = ssh://git@github.com/davidpfister/odbc.f
+[submodule "compute_fsle_ftlv@dcortales"]
+	path = compute_fsle_ftlv@dcortales
+	url = ssh://git@github.com/dcortales/compute_fsle_ftlv
+[submodule "VAMPER-v2@dmr-dj"]
+	path = VAMPER-v2@dmr-dj
+	url = ssh://git@github.com/dmr-dj/VAMPER-v2
+[submodule "sparseSET@dorivalpiedadeneto"]
+	path = sparseSET@dorivalpiedadeneto
+	url = ssh://git@github.com/dorivalpiedadeneto/sparseSET
+[submodule "decwar@drforbin"]
+	path = decwar@drforbin
+	url = ssh://git@github.com/drforbin/decwar
+[submodule "ectrans@ecmwf-ifs"]
+	path = ectrans@ecmwf-ifs
+	url = ssh://git@github.com/ecmwf-ifs/ectrans
+[submodule "Pulse_Profile_Simulation@edavurgun"]
+	path = Pulse_Profile_Simulation@edavurgun
+	url = ssh://git@github.com/edavurgun/Pulse_Profile_Simulation
+[submodule "myRadex@fjdu"]
+	path = myRadex@fjdu
+	url = ssh://git@github.com/fjdu/myRadex
+[submodule "swatpgl@fuchsiger"]
+	path = swatpgl@fuchsiger
+	url = ssh://git@github.com/fuchsiger/swatpgl
+[submodule "DIVA@gher-uliege"]
+	path = DIVA@gher-uliege
+	url = ssh://git@github.com/gher-uliege/DIVA
+[submodule "oak@gher-uliege"]
+	path = oak@gher-uliege
+	url = ssh://git@github.com/gher-uliege/oak
+[submodule "quadtree-fortran@gidonbauer"]
+	path = quadtree-fortran@gidonbauer
+	url = ssh://git@github.com/gidonbauer/quadtree-fortran
+[submodule "soc-rad-conv-fort@hinnes97"]
+	path = soc-rad-conv-fort@hinnes97
+	url = ssh://git@github.com/hinnes97/soc-rad-conv-fort
+[submodule "M-ANEOS@isale-code"]
+	path = M-ANEOS@isale-code
+	url = ssh://git@github.com/isale-code/M-ANEOS
+[submodule "dbrew-for@ivan-pi"]
+	path = dbrew-for@ivan-pi
+	url = ssh://git@github.com/ivan-pi/dbrew-for
+[submodule "tf2@ivanZanardi"]
+	path = tf2@ivanZanardi
+	url = ssh://git@github.com/ivanZanardi/tf2
+[submodule "FortranConsoleSpline@ja72"]
+	path = FortranConsoleSpline@ja72
+	url = ssh://git@github.com/ja72/FortranConsoleSpline
+[submodule "fortranpack@jacobwilliams"]
+	path = fortranpack@jacobwilliams
+	url = ssh://git@github.com/jacobwilliams/fortranpack
+[submodule "moonframe@jacobwilliams"]
+	path = moonframe@jacobwilliams
+	url = ssh://git@github.com/jacobwilliams/moonframe
+[submodule "kestrel@jakelangham"]
+	path = kestrel@jakelangham
+	url = ssh://git@github.com/jakelangham/kestrel
+[submodule "foap4@jannisteunissen"]
+	path = foap4@jannisteunissen
+	url = ssh://git@github.com/jannisteunissen/foap4
+[submodule "fortran_benchmarks@jannisteunissen"]
+	path = fortran_benchmarks@jannisteunissen
+	url = ssh://git@github.com/jannisteunissen/fortran_benchmarks
+[submodule "gadgetviewer@jchelly"]
+	path = gadgetviewer@jchelly
+	url = ssh://git@github.com/jchelly/gadgetviewer
+[submodule "SFEMaNS@jean-luc-guermond"]
+	path = SFEMaNS@jean-luc-guermond
+	url = ssh://git@github.com/jean-luc-guermond/SFEMaNS
+[submodule "j_presto@jikebe-AIST"]
+	path = j_presto@jikebe-AIST
+	url = ssh://git@github.com/jikebe-AIST/j_presto
+[submodule "FEOTS@lanl"]
+	path = FEOTS@lanl
+	url = ssh://git@github.com/lanl/FEOTS
+[submodule "NEXMD@lanl"]
+	path = NEXMD@lanl
+	url = ssh://git@github.com/lanl/NEXMD
+[submodule "PLUMECALC@lanl"]
+	path = PLUMECALC@lanl
+	url = ssh://git@github.com/lanl/PLUMECALC
+[submodule "SHIELDS-PTM@lanl"]
+	path = SHIELDS-PTM@lanl
+	url = ssh://git@github.com/lanl/SHIELDS-PTM
+[submodule "SuperNu@lanl"]
+	path = SuperNu@lanl
+	url = ssh://git@github.com/lanl/SuperNu
+[submodule "Trees@lanl"]
+	path = Trees@lanl
+	url = ssh://git@github.com/lanl/Trees
+[submodule "rgm@lanl"]
+	path = rgm@lanl
+	url = ssh://git@github.com/lanl/rgm
+[submodule "do-conc-order@marshallward"]
+	path = do-conc-order@marshallward
+	url = ssh://git@github.com/marshallward/do-conc-order
+[submodule "Smallpox-in-Aboriginal-Australia@mcnitschke"]
+	path = Smallpox-in-Aboriginal-Australia@mcnitschke
+	url = ssh://git@github.com/mcnitschke/Smallpox-in-Aboriginal-Australia
+[submodule "FortranChess@menezesd"]
+	path = FortranChess@menezesd
+	url = ssh://git@github.com/menezesd/FortranChess
+[submodule "MovingEB_CNSAMReX@nataraj2"]
+	path = MovingEB_CNSAMReX@nataraj2
+	url = ssh://git@github.com/nataraj2/MovingEB_CNSAMReX
+[submodule "prms@nhm-usgs"]
+	path = prms@nhm-usgs
+	url = ssh://git@github.com/nhm-usgs/prms
+[submodule "qssp@nicklinyi"]
+	path = qssp@nicklinyi
+	url = ssh://git@github.com/nicklinyi/qssp
+[submodule "Drops@nikoscham"]
+	path = Drops@nikoscham
+	url = ssh://git@github.com/nikoscham/Drops
+[submodule "readbyte@obreschkow"]
+	path = readbyte@obreschkow
+	url = ssh://git@github.com/obreschkow/readbyte
+[submodule "stingray@obreschkow"]
+	path = stingray@obreschkow
+	url = ssh://git@github.com/obreschkow/stingray
+[submodule "ichthyotox@oceanicsdotio"]
+	path = ichthyotox@oceanicsdotio
+	url = ssh://git@github.com/oceanicsdotio/ichthyotox
+[submodule "flibs@philip-peterson"]
+	path = flibs@philip-peterson
+	url = ssh://git@github.com/philip-peterson/flibs
+[submodule "ellc@pmaxted"]
+	path = ellc@pmaxted
+	url = ssh://git@github.com/pmaxted/ellc
+[submodule "frsh@polybones"]
+	path = frsh@polybones
+	url = ssh://git@github.com/polybones/frsh
+[submodule "pypestutils@pypest"]
+	path = pypestutils@pypest
+	url = ssh://git@github.com/pypest/pypestutils
+[submodule "ICPertFLRW_GRH@robynlm"]
+	path = ICPertFLRW_GRH@robynlm
+	url = ssh://git@github.com/robynlm/ICPertFLRW_GRH
+[submodule "jimf-cligen532@rogerlew"]
+	path = jimf-cligen532@rogerlew
+	url = ssh://git@github.com/rogerlew/jimf-cligen532
+[submodule "Polymer_DNS@ryankellybp11"]
+	path = Polymer_DNS@ryankellybp11
+	url = ssh://git@github.com/ryankellybp11/Polymer_DNS
+[submodule "pyTSFoil@swayli94"]
+	path = pyTSFoil@swayli94
+	url = ssh://git@github.com/swayli94/pyTSFoil
+[submodule "Rocflupicl@thierrydaoud"]
+	path = Rocflupicl@thierrydaoud
+	url = ssh://git@github.com/thierrydaoud/Rocflupicl
+[submodule "CREHDYS@timoclement"]
+	path = CREHDYS@timoclement
+	url = ssh://git@github.com/timoclement/CREHDYS
+[submodule "fpm-gdb@urbanjost"]
+	path = fpm-gdb@urbanjost
+	url = ssh://git@github.com/urbanjost/fpm-gdb
+[submodule "ShoreTrans-fortran@user689"]
+	path = ShoreTrans-fortran@user689
+	url = ssh://git@github.com/user689/ShoreTrans-fortran
+[submodule "fstdlib@vterzi"]
+	path = fstdlib@vterzi
+	url = ssh://git@github.com/vterzi/fstdlib
+[submodule "hccp@yesint"]
+	path = hccp@yesint
+	url = ssh://git@github.com/yesint/hccp
+[submodule "spice2@yeti01"]
+	path = spice2@yeti01
+	url = ssh://git@github.com/yeti01/spice2
+[submodule "yrec@yreclab"]
+	path = yrec@yreclab
+	url = ssh://git@github.com/yreclab/yrec
+[submodule "pdti_public_version@yujiyagi"]
+	path = pdti_public_version@yujiyagi
+	url = ssh://git@github.com/yujiyagi/pdti_public_version
+[submodule "fdate@zcobell"]
+	path = fdate@zcobell
+	url = ssh://git@github.com/zcobell/fdate
