Add new projects from fortran-long.org

--- a/.gitmodules
+++ b/.gitmodules
@@ -8443,3 +8443,12 @@
 [submodule "fdate@zcobell"]
 	path = fdate@zcobell
 	url = ssh://git@github.com/zcobell/fdate
+[submodule "fiats@BerkeleyLab"]
+	path = fiats@BerkeleyLab
+	url = ssh://git@github.com/BerkeleyLab/fiats
+[submodule "geos-chem@geoschem"]
+	path = geos-chem@geoschem
+	url = ssh://git@github.com/geoschem/geos-chem
+[submodule "tree-sitter-fortran@stadelmanma"]
+	path = tree-sitter-fortran@stadelmanma
+	url = ssh://git@github.com/stadelmanma/tree-sitter-fortran
