Add projects from Beliavsky

--- a/.gitmodules
+++ b/.gitmodules
@@ -8452,3 +8452,57 @@
 [submodule "tree-sitter-fortran@stadelmanma"]
 	path = tree-sitter-fortran@stadelmanma
 	url = ssh://git@github.com/stadelmanma/tree-sitter-fortran
+[submodule "rclf@AChompSitsIn"]
+	path = rclf@AChompSitsIn
+	url = ssh://git@github.com/AChompSitsIn/rclf
+[submodule "ncl@NCAR"]
+	path = ncl@NCAR
+	url = ssh://git@github.com/NCAR/ncl
+[submodule "nwsrfs-hydro-models@NOAA-NWRFC"]
+	path = nwsrfs-hydro-models@NOAA-NWRFC
+	url = ssh://git@github.com/NOAA-NWRFC/nwsrfs-hydro-models
+[submodule "akima86@NRLMMD-GEOIPS"]
+	path = akima86@NRLMMD-GEOIPS
+	url = ssh://git@github.com/NRLMMD-GEOIPS/akima86
+[submodule "pindol@acammarat"]
+	path = pindol@acammarat
+	url = ssh://git@github.com/acammarat/pindol
+[submodule "chk-fortran-features@arjenmarkus"]
+	path = chk-fortran-features@arjenmarkus
+	url = ssh://git@github.com/arjenmarkus/chk-fortran-features
+[submodule "rBDAT@cran"]
+	path = rBDAT@cran
+	url = ssh://git@github.com/cran/rBDAT
+[submodule "Gramsci@csabiu"]
+	path = Gramsci@csabiu
+	url = ssh://git@github.com/csabiu/Gramsci
+[submodule "dep@dailyerosion"]
+	path = dep@dailyerosion
+	url = ssh://git@github.com/dailyerosion/dep
+[submodule "wavetrisk_hydrostatic@kevlahan"]
+	path = wavetrisk_hydrostatic@kevlahan
+	url = ssh://git@github.com/kevlahan/wavetrisk_hydrostatic
+[submodule "fortplotlib@krystophny"]
+	path = fortplotlib@krystophny
+	url = ssh://git@github.com/krystophny/fortplotlib
+[submodule "pact@marcelinoagundez"]
+	path = pact@marcelinoagundez
+	url = ssh://git@github.com/marcelinoagundez/pact
+[submodule "unlimited_polymorphic_lists_f2008@paulovcmedeiros"]
+	path = unlimited_polymorphic_lists_f2008@paulovcmedeiros
+	url = ssh://git@github.com/paulovcmedeiros/unlimited_polymorphic_lists_f2008
+[submodule "RMPCDMD@pdebuyl-lab"]
+	path = RMPCDMD@pdebuyl-lab
+	url = ssh://git@github.com/pdebuyl-lab/RMPCDMD
+[submodule "fortran_hash_table@pdebuyl"]
+	path = fortran_hash_table@pdebuyl
+	url = ssh://git@github.com/pdebuyl/fortran_hash_table
+[submodule "spag_lapack@urbanjost"]
+	path = spag_lapack@urbanjost
+	url = ssh://git@github.com/urbanjost/spag_lapack
+[submodule "PCOMCOT2.1@yifanzhu-fluid"]
+	path = PCOMCOT2.1@yifanzhu-fluid
+	url = ssh://git@github.com/yifanzhu-fluid/PCOMCOT2.1
+[submodule "EarthMesh@zhongwangwei"]
+	path = EarthMesh@zhongwangwei
+	url = ssh://git@github.com/zhongwangwei/EarthMesh
